# task-manager

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
src/: main.cpp
src/app/: app.cpp  app.h  command.cpp  command.h  launcher.cpp  launcher.h  task.cpp  task.h
